--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -1,33 +1,50 @@
-.custom-button {
-    min-width: 165px;
-    width: auto;
-    height: 50px;
-    letter-spacing: 0.5px;
-    line-height: 50px;
-    padding: 0 35px 0 35px;
-    font-size: 15px;
+@mixin look($inverted: false) {
+  @if $inverted {    
     background-color: black;
     color: white;
-    text-transform: uppercase;
-    font-family: 'Open Sans Condensed';
-    font-weight: bolder;
     border: none;
-    cursor: pointer;
-  
-    &:hover {
-      background-color: white;
-      color: black;
-      border: 1px solid black;
-    }
-
-    &.google-sign-in {
-      background-color: #4285f4;
-      color: white;      
-
-      &:hover {
-        background-color: #357ae8;
-        border: none;
-      }
-    }    
+  } @else {
+    background-color: white;
+    color: black;
+    border: 1px solid black;
   }
-  
+}
+
+.custom-button {
+  @include look();
+  min-width: 165px;
+  width: auto;
+  height: 50px;
+  letter-spacing: 0.5px;
+  line-height: 50px;
+  padding: 0 35px 0 35px;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-family: "Open Sans Condensed";
+  font-weight: bolder;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+
+  &:hover {
+    @include look(true);
+  }
+
+  &.google-sign-in {
+    background-color: #4285f4;
+    color: white;
+
+    &:hover {
+      background-color: #357ae8;
+      border: none;
+    }
+  }
+
+  &.inverted {
+    @include look(true);
+
+    &:hover {
+      @include look();
+    }
+  }
+}
